InputDropdown bugfixes
- bugfix on InputDropdown UI where .input-dropdown-list gets hidden behind other InputDropdowns--it is now brought in front in DOM order
- feature on InputDropdown that it will now close if you press the input-dropdown-chevron (closes if you touch anything that's not the .input-dropdown-input itself

--- a/src/components/InputDropdown/InputDropdown.css
+++ b/src/components/InputDropdown/InputDropdown.css
@@ -49,11 +49,12 @@
   background-color: white;
   border: 1px solid lightblue;
   border-radius: 0.25rem;
-  margin: 2px;
+  margin-top: 2px;
   padding: 0;
   font-size: 1rem;
   max-height: 10rem;
   overflow-y: auto;
+  z-index: 1;
 }
 
 .input-dropdown.open .input-dropdown-list {
